--- a/index.html
+++ b/index.html
@@ -33,88 +33,88 @@
     <div class="spacer"></div>
 
 
-    <h2 class="title">
-        FACULTY MENTORS
-    </h2>
+    <div class="mydiv reveal">
+        <h2 class="title">
+            FACULTY MENTORS
+        </h2>
 
 
-    <div>
-        <div class="row">
-            <div class="rd">
-                <iframe
-                    src="../src/Components/Card/card.html?name=Prof. Dhwaniket Kamble&description=Faculty Sponsor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
+        <div>
+            <div class="row">
+                <div class="rd">
+                    <iframe
+                        src="../src/Components/Card/card.html?name=Prof. Dhwaniket Kamble&description=Faculty Sponsor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
+                </div>
+                <div>
+                    <iframe
+                        src="../src/Components/Card/card.html?name=Dr. Kamal Mehta&description=Faculty Mentor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
+                </div>
+                <div>
+                    <iframe
+                        src="../src/Components/Card/card.html?name=Prof. Poonam Kapse&description=Main Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
+                </div>
+                <div>
+                    <iframe
+                        src="../src/Components/Card/card.html?name=rof. Diksha Bhalerao&description=Vice Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
+                </div>
             </div>
-            <div>
-                <iframe
-                    src="../src/Components/Card/card.html?name=Dr. Kamal Mehta&description=Faculty Mentor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
-            </div>
-            <div>
-                <iframe
-                    src="../src/Components/Card/card.html?name=Prof. Poonam Kapse&description=Main Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
-            </div>
-            <div>
-                <iframe
-                    src="../src/Components/Card/card.html?name=rof. Diksha Bhalerao&description=Vice Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
+            <div class="row">
+                <div>
+                    <iframe
+                        src="../src/Components/Card/card.html?name=Prof. Santosh Rathod&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
+                </div>
+                <div>
+                    <iframe
+                        src="../src/Components/Card/card.html?name=Prof. Dipika Sharma&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
+                </div>
+                <div>
+                    <iframe
+                        src="../src/Components/Card/card.html?name=Prof. Sunita Kumar&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
+                </div>
+                <div>
+                    <iframe
+                        src="../src/Components/Card/card.html?name=Prof. Snehal Lohi&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div>
-                <iframe
-                    src="../src/Components/Card/card.html?name=Prof. Santosh Rathod&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
-            </div>
-            <div>
-                <iframe
-                    src="../src/Components/Card/card.html?name=Prof. Dipika Sharma&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
-            </div>
-            <div>
-                <iframe
-                    src="../src/Components/Card/card.html?name=Prof. Sunita Kumar&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
-            </div>
-            <div>
-                <iframe
-                    src="../src/Components/Card/card.html?name=Prof. Snehal Lohi&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
+    </div>
+
+    <div class="spacer"></div>
+
+    <div class="mydiv reveal">
+        <h2 class="title">
+            TESTIMONIALS </h2>
+
+        <div>
+            <div class="row">
+                <div style="margin-right: 40px;">
+                    <iframe
+                        src="../src/Components/Testimonial/testimonial.html?name=John&description=Web Developer&pic=/src/Components/Testimonial/Assets/card.png"
+                        style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
+                </div>
+
+                <div style="margin-right: 40px;">
+                    <iframe
+                        src="../src/Components/Testimonial/testimonial.html?name=John&description=Web Developer&pic=/src/Components/Testimonial/Assets/card.png"
+                        style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
+                </div>
+                <div>
+                    <iframe
+                        src="../src/Components/Testimonial/testimonial.html?name=John&description=Web Developer&pic=/src/Components/Testimonial/Assets/card.png"
+                        style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
+                </div>
             </div>
         </div>
     </div>
 
-
-    <div class="scroll">
-        <img id="scrollImage2" src="../src/Pages/Home/Assets/scroll.png" alt="scroll" width="70px">
-    </div>
-
-
-
-    <h2 class="title">
-        TESTIMONIALS </h2>
-
-    <div>
-        <div class="row">
-            <div style="margin-right: 40px;">
-                <iframe
-                    src="../src/Components/Testimonial/testimonial.html?name=John&description=Web Developer&pic=/src/Components/Testimonial/Assets/card.png"
-                    style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
-            </div>
-
-            <div style="margin-right: 40px;">
-                <iframe
-                    src="../src/Components/Testimonial/testimonial.html?name=John&description=Web Developer&pic=/src/Components/Testimonial/Assets/card.png"
-                    style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
-            </div>
-            <div>
-                <iframe
-                    src="../src/Components/Testimonial/testimonial.html?name=John&description=Web Developer&pic=/src/Components/Testimonial/Assets/card.png"
-                    style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
-            </div>
-        </div>
-    </div>
 
     <div class="spacer"></div>
 
@@ -161,15 +161,27 @@
         });
     </script>
 
-    <script>
-        var scrollImage = document.getElementById('scrollImage2');
-        scrollImage.addEventListener('click', function () {
-            var scrollToY = 1550;
-            window.scrollTo({
-                top: scrollToY,
-                behavior: 'smooth'
-            });
-        });
+
+    <script type="text/javascript">
+        window.addEventListener('scroll', reveal);
+
+        function reveal() {
+            var reveals = document.querySelectorAll('.reveal');
+
+            for (var i = 0; i < reveals.length; i++) {
+                var windoowheight = window.innerHeight;
+                var revealtop = reveals[i].getBoundingClientRect().top;
+                var revealpoint = 150;
+
+                if (revealtop < windoowheight - revealpoint) {
+                    reveals[i].classList.add('active');
+                }
+                else {
+                    reveals[i].classList.remove('active');
+                }
+            }
+
+        }
     </script>
 
 
