--- a/src/Pages/Past/past.html
+++ b/src/Pages/Past/past.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="past.css">
     <title>Past Events</title>
 </head>
+
 <body background="../Past/Assets/bg.jpg">
     <div>
         <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
@@ -13,20 +15,53 @@
 
     <div class="container">
         <h1 class="title">PAST EVENTS</h1>
-
-        <div>
-            <iframe class="ev"
-                src="../../Components/Event/event.html?tit=Inauguration: 20th Oct 2023&desp=The inauguration of the ACM (Association for Computing Machinery) 
+        <div class="box">
+            <div>
+                <iframe class="ev" src="../../Components/Event/event.html?tit=Inauguration: 20th Oct 2023&desp=The inauguration of the ACM (Association for Computing Machinery) 
                 club in our college was a momentous occasion, marked by enthusiasm and anticipation. 
                 Students and faculty gathered to witness the birth of this dynamic community dedicated to all things computing. 
                 The event featured inspiring speeches from distinguished guests, highlighting the importance of innovation and collaboration 
                 in the field of computer science. With the ACM club's inception, a new era of exploration and learning in the 
-                world of technology has begun at our college.&ev-img=/src/Pages/Upcoming/Assets/bg.jpg"
-                frameborder="0" width="100%" scrolling="no"></iframe>
+                world of technology has begun at our college.&ev-img=/src/Pages/Upcoming/Assets/bg.jpg" frameborder="0"
+                    width="100%" scrolling="no"></iframe>
+            </div>
         </div>
 
-        <div class="spacer"></div>
+        <div class="box">
+            <div>
+                <iframe class="ev" src="../../Components/Event/event.html?tit=Inauguration: 20th Oct 2023&desp=The inauguration of the ACM (Association for Computing Machinery) 
+                club in our college was a momentous occasion, marked by enthusiasm and anticipation. 
+                Students and faculty gathered to witness the birth of this dynamic community dedicated to all things computing. 
+                The event featured inspiring speeches from distinguished guests, highlighting the importance of innovation and collaboration 
+                in the field of computer science. With the ACM club's inception, a new era of exploration and learning in the 
+                world of technology has begun at our college.&ev-img=/src/Pages/Upcoming/Assets/bg.jpg" frameborder="0"
+                    width="100%" scrolling="no"></iframe>
+            </div>
+        </div>
 
+        <div class="box">
+            <div>
+                <iframe class="ev" src="../../Components/Event/event.html?tit=Inauguration: 20th Oct 2023&desp=The inauguration of the ACM (Association for Computing Machinery) 
+                club in our college was a momentous occasion, marked by enthusiasm and anticipation. 
+                Students and faculty gathered to witness the birth of this dynamic community dedicated to all things computing. 
+                The event featured inspiring speeches from distinguished guests, highlighting the importance of innovation and collaboration 
+                in the field of computer science. With the ACM club's inception, a new era of exploration and learning in the 
+                world of technology has begun at our college.&ev-img=/src/Pages/Upcoming/Assets/bg.jpg" frameborder="0"
+                    width="100%" scrolling="no"></iframe>
+            </div>
+        </div>
+
+        <div class="box">
+            <div>
+                <iframe class="ev" src="../../Components/Event/event.html?tit=Inauguration: 20th Oct 2023&desp=The inauguration of the ACM (Association for Computing Machinery) 
+                club in our college was a momentous occasion, marked by enthusiasm and anticipation. 
+                Students and faculty gathered to witness the birth of this dynamic community dedicated to all things computing. 
+                The event featured inspiring speeches from distinguished guests, highlighting the importance of innovation and collaboration 
+                in the field of computer science. With the ACM club's inception, a new era of exploration and learning in the 
+                world of technology has begun at our college.&ev-img=/src/Pages/Upcoming/Assets/bg.jpg" frameborder="0"
+                    width="100%" scrolling="no"></iframe>
+            </div>
+        </div>
 
     </div>
 
@@ -59,6 +94,9 @@
 
         window.addEventListener('resize', resizeAllIframes);
     </script>
-    
+    <script src="past.js"></script>
+
+
 </body>
+
 </html>
