--- a/src/Pages/Team/team.html
+++ b/src/Pages/Team/team.html
@@ -61,7 +61,7 @@
         </div>
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Nishtha Yadav&description=ACM-Women Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Nishtha Yadav.jpg&backImage=/src/Pages/Team/Assets/Nishtha Yadav.jpg"
+                src="../../Components/Card/card.html?name=Nishtha Yadav&description=ACM-Women Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Nishtha Yadav.png&backImage=/src/Pages/Team/Assets/Nishtha Yadav.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
