--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body background="../src/Pages/Home/Assets/bg.jpg">
-    <div>
+    <div class="stk">
         <iframe src="../src/Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
 
@@ -24,10 +24,6 @@
         <p class="tag">
             SHAPING THE FUTURE
         </p>
-    </div>
-
-    <div class="scroll">
-        <img id="scrollImage" src="../src/Pages/Home/Assets/scroll.png" alt="scroll" width="70px">
     </div>
 
     <div class="spacer"></div>
@@ -53,12 +49,12 @@
                 </div>
                 <div>
                     <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Poonam Kapse&description=Main Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        src="../src/Components/Card/card.html?name=Prof. Poonam Kapse&description=President&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                         class="cardFrame" frameborder="0" scrolling="no"></iframe>
                 </div>
                 <div>
                     <iframe
-                        src="../src/Components/Card/card.html?name=rof. Diksha Bhalerao&description=Vice Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        src="../src/Components/Card/card.html?name=rof. Diksha Bhalerao&description=Vice President&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                         class="cardFrame" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
@@ -147,18 +143,6 @@
         }
 
         window.addEventListener('resize', resizeAllIframes);
-    </script>
-
-
-    <script>
-        var scrollImage = document.getElementById('scrollImage');
-        scrollImage.addEventListener('click', function () {
-            var scrollToY = 735;
-            window.scrollTo({
-                top: scrollToY,
-                behavior: 'smooth'
-            });
-        });
     </script>
 
 
