--- a/src/Pages/Gallery/gallery.html
+++ b/src/Pages/Gallery/gallery.html
@@ -7,7 +7,7 @@
     <title>Gallery</title>
 </head>
 <body background="../Gallery/Assets/bg.jpg">
-    <div>
+    <div class="stk">
         <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
 
