--- a/src/Pages/Past/past.html
+++ b/src/Pages/Past/past.html
@@ -9,7 +9,7 @@
 </head>
 
 <body background="../Past/Assets/bg.jpg">
-    <div>
+    <div class="stk">
         <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
 
