--- a/src/Pages/About/about.html
+++ b/src/Pages/About/about.html
@@ -7,7 +7,7 @@
     <title>About</title>
 </head>
 <body background="../About/Assets/bg.jpg">
-    <div>
+    <div class="stk">
         <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
 
