Changed Team Page

--- a/src/Pages/Team/team.html
+++ b/src/Pages/Team/team.html
@@ -13,128 +13,15 @@
         <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
 
-    <h2 class="title">TEAM 2023 - 2024</h2>
+    <button id="team2023Button" class="team-button">2023 - 2024</button>
+    <button id="team2024Button" class="team-button">2024 - 2025</button>
+
 
     <div class="spacer"></div>
 
 
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Sakshi Jadhav&description=Chairperson&lilk=https://www.linkedin.com/in/sakshi-jadhav-402165219?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app&frontImage=/src/Pages/Team/Assets/Sakshi Jadhav.png&backImage=/src/Pages/Team/Assets/Sakshi Jadhav.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Gaurav Desale&description=Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Gaurav Desale.jpg&backImage=/src/Pages/Team/Assets/Gaurav Desale.jpg"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Fahim Khan&description=Secretary&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Fahim Khan.jpg&backImage=/src/Pages/Team/Assets/Fahim Khan.jpg"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Shubham Sontakke&description=Treasurer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Shubham Sontakke.png&backImage=/src/Pages/Team/Assets/Shubham Sontakke.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Aviral Dev&description=Vice Treasurer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg&backImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Varshita Nalluri&description=ACM-Women Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Varshita Nalluri.jpg&backImage=/src/Pages/Team/Assets/Varshita Nalluri.jpg"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Nishtha Yadav&description=ACM-Women Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Nishtha Yadav.png&backImage=/src/Pages/Team/Assets/Nishtha Yadav.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Kamran Khan&description=Technical Head&gilk=https://github.com/kamran1819g&gllk=https://kamran1819g.vercel.app&lilk=https://linkedin.com/in/kamran1819g&frontImage=/src/Pages/Team/Assets/Kamran Khan.png&backImage=/src/Pages/Team/Assets/Kamran Khan.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Shivam Bhosle&description=Web Master&gilk=https://github.com/007-Shivam&gllk=https://sites.google.com/view/shivambhosle/home?pli=1&lilk=https://www.linkedin.com/in/shivambhosle007/&frontImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg&backImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Shubham Kumavat&description=Website Co-ordinator&gilk=https://github.com/Shubham-711&lilk=https://www.linkedin.com/in/shubham-kumavat-39b251296/&frontImage=/src/Pages/Team/Assets/Shubham Kumavat.jpg&backImage=/src/Pages/Team/Assets/Shubham Kumavat.jpg"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Saloni Wani&description=Creativity Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg&backImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Khushi Raj&description=Organizational Head&gilk=https://github.com/khushiiraj&lilk=https://www.linkedin.com/in/khushi-raj-091264241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app&frontImage=/src/Pages/Team/Assets/Khushi Raj.png&backImage=/src/Pages/Team/Assets/Khushi Raj.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Disha Jain&description=Overall Event Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Disha Jain.jpg&backImage=/src/Pages/Team/Assets/Disha Jain.jpg"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Yashovardhan Kathika&description=Photographer&lilk=https://www.linkedin.com/in/yasho-kathika-a4ab54220?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app&frontImage=/src/Pages/Team/Assets/Kathika Yashovardhan.jpg&backImage=/src/Pages/Team/Assets/Kathika Yashovardhan.jpg"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Souti Samanta&description=Graphics Master&gilk=https://github.com/Souti717&lilk=https://www.linkedin.com/in/souti-samanta-696807291/&frontImage=/src/Pages/Team/Assets/Souti Samanta.png&backImage=/src/Pages/Team/Assets/Souti Samanta.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Kashish Durgapal&description=Publicity Head&gilk=https://github.com/Kashish-2205&lilk=https://www.linkedin.com/in/kashish-durgapal-8277b1296?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app&frontImage=/src/Pages/Team/Assets/Kashish Durgapal.jpg&backImage=/src/Pages/Team/Assets/Kashish Durgapal.jpg"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Shudhanshu Mishra&description=Membership Head&gilk=https://github.com/Sudhanshu-m&lilk=https://www.linkedin.com/in/sudhanshu-mishra-749a2126b&frontImage=/src/Pages/Team/Assets/Sudhanshu Mishra.jpg&backImage=/src/Pages/Team/Assets/Sudhanshu Mishra.jpg"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
+    <iframe id="teamFrame" src="../../Components/TeamsperYear/tm.html" class="cardFrame" width="100%" height="auto"
+        frameborder="0" scrolling="no"></iframe>
 
     <div class="spacer"></div>
 
@@ -165,6 +52,22 @@
         }
 
         window.addEventListener('resize', resizeAllIframes);
+    </script>
+
+
+    <script>
+        const team2023Button = document.getElementById("team2023Button");
+        const team2024Button = document.getElementById("team2024Button");
+        const teamFrame = document.getElementById("teamFrame");
+
+        team2023Button.addEventListener("click", () => {
+            teamFrame.src = "../../Components/TeamsperYear/tm.html";
+        });
+
+        team2024Button.addEventListener("click", () => {
+            teamFrame.src = "javascript:void(0);"; // Set the iframe's content to a JavaScript void
+            teamFrame.contentWindow.document.write("<h3>Team yet to be selected . . .</h3>"); // Display the message
+        });
     </script>
 
 </body>
