--- a/index.html
+++ b/index.html
@@ -39,44 +39,44 @@
             <div class="row">
                 <div class="rd">
                     <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Dhwaniket Kamble&description=Faculty Sponsor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        src="../src/Components/Card/card.html?name=Prof. Dhwaniket Kamble&description=Faculty Sponsor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Dhwaniket Kamble.jpg&backImage=/src/Pages/Home/Assets/Dhwaniket Kamble.jpg"
                         class="cardFrame" frameborder="0" scrolling="no"></iframe>
                 </div>
                 <div>
                     <iframe
-                        src="../src/Components/Card/card.html?name=Dr. Kamal Mehta&description=Faculty Mentor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        src="../src/Components/Card/card.html?name=Dr. Kamal Mehta&description=Faculty Mentor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Kamal Mehta.jpg&backImage=/src/Pages/Home/Assets/Kamal Mehta.jpg"
                         class="cardFrame" frameborder="0" scrolling="no"></iframe>
                 </div>
                 <div>
                     <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Poonam Kapse&description=President&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        src="../src/Components/Card/card.html?name=Prof. Poonam Kapse&description=President&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Poonam Kapse.jpg&backImage=/src/Pages/Home/Assets/Poonam Kapse.jpg"
                         class="cardFrame" frameborder="0" scrolling="no"></iframe>
                 </div>
                 <div>
                     <iframe
-                        src="../src/Components/Card/card.html?name=rof. Diksha Bhalerao&description=Vice President&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        src="../src/Components/Card/card.html?name=Prof. Diksha Bhalerao&description=Vice President&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Diksha Bhalerao.jpg&backImage=/src/Pages/Home/Assets/Diksha Bhalerao.jpg"
                         class="cardFrame" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
             <div class="row">
                 <div>
                     <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Santosh Rathod&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        src="../src/Components/Card/card.html?name=Prof. Santosh Rathod&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Santosh Rathod.jpg&backImage=/src/Pages/Home/Assets/Santosh Rathod.jpg"
                         class="cardFrame" frameborder="0" scrolling="no"></iframe>
                 </div>
                 <div>
                     <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Dipika Sharma&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        src="../src/Components/Card/card.html?name=Prof. Deepika Sharma&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Deepika Sharma.jpg&backImage=/src/Pages/Home/Assets/Deepika Sharma.jpg"
                         class="cardFrame" frameborder="0" scrolling="no"></iframe>
                 </div>
                 <div>
                     <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Sunita Kumar&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        src="../src/Components/Card/card.html?name=Prof. Sumita Kumar&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Sumita Kumar.jpg&backImage=/src/Pages/Home/Assets/Sumita Kumar.jpg"
                         class="cardFrame" frameborder="0" scrolling="no"></iframe>
                 </div>
                 <div>
                     <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Snehal Lohi&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                        src="../src/Components/Card/card.html?name=Prof. Snehal Lohi&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Snehal Lohi.jpg&backImage=/src/Pages/Home/Assets/Snehal Lohi.jpg"
                         class="cardFrame" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
